---
title: Recognition Service Persistence (PostgreSQL + pgvector)
---
erDiagram
    %% Legend: ENTRY = external entrypoint. Dashed arrow = optional wiring.
    %% Code anchors: apps/prototype-description-service/db/models.py; recognition/infrastructure/repositories/*

    LEGEND {
        string entrypoint
        string optional_wiring
    }
    TENANTS {
        uuid id PK
        varchar site_url UK
        timestamptz created_at
        timestamptz updated_at
    }

    API_KEYS {
        uuid id PK
        uuid tenant_id FK
        varchar api_key_hash
        varchar rate_limit_tier
        timestamptz created_at
        timestamptz last_used_at
    }

    MEDIA_IDENTITIES {
        uuid id PK
        uuid tenant_id FK
        int media_id
        text media_url
        int bbox_x
        int bbox_y
        int bbox_width
        int bbox_height
        float confidence
        vector embedding
        float pose_pitch
        float pose_yaw
        float pose_roll
        float quality_score
        int age
        int gender
        varchar image_phash
        varchar thumbnail_url
        timestamptz created_at
        timestamptz updated_at
        int created_by_user_id
    }

    IDENTITY_CLUSTERS {
        uuid id PK
        uuid tenant_id FK
        varchar label
        uuid representative_identity_id FK
        int identity_count
        uuid roster_id
        float similarity_threshold
        float curriculum_t
        timestamptz curriculum_t_updated_at
        varchar clustering_algorithm
        bool user_confirmed
        int confirmation_count
        varchar confirmation_source
        timestamptz created_at
        timestamptz updated_at
        int created_by_user_id
    }

    IDENTITY_MEMBERS {
        uuid id PK
        uuid tenant_id FK
        uuid cluster_id FK
        uuid identity_id FK
        float similarity
        timestamptz assigned_at
        timestamptz created_at
        int created_by_user_id
    }

    IDENTITY_CLUSTER_REPRESENTATIVES {
        uuid id PK
        uuid tenant_id FK
        uuid cluster_id FK
        uuid identity_id FK
        vector embedding
        float pose_pitch
        float pose_yaw
        float pose_roll
        float quality_score
        float diversity_score
        bool is_user_selected
        bool is_provisional
        timestamptz created_at
    }

    MV_IDENTITY_CLUSTER_CENTROIDS {
        uuid cluster_id PK
        uuid tenant_id
        vector centroid
        timestamptz refreshed_at
    }

    IDENTITY_SCAN_JOBS {
        uuid id PK
        uuid tenant_id FK
        varchar status
        int[] media_ids
        int total_media
        int processed_media
        int identities_detected
        text error_message
        text message
        timestamptz created_at
        timestamptz started_at
        timestamptz completed_at
        int created_by_user_id
    }

    IDENTITY_SCAN_JOB_ITEMS {
        uuid id PK
        uuid job_id FK
        uuid tenant_id FK
        int media_id
        text media_url
        varchar status
        int attempts
        int identities_detected
        text last_error
        timestamptz created_at
        timestamptz started_at
        timestamptz completed_at
    }

    IDENTITY_CLUSTERING_JOBS {
        uuid id PK
        uuid tenant_id FK
        varchar job_type
        varchar status
        float progress
        int total_identities
        int processed_identities
        text message
        jsonb payload
        text error_message
        timestamptz created_at
        timestamptz started_at
        timestamptz completed_at
        int created_by_user_id
    }

    IDENTITY_SUGGESTIONS {
        uuid id PK
        uuid tenant_id FK
        uuid identity_id FK
        uuid suggested_cluster_id FK
        float representative_similarity
        float avg_member_similarity
        float confidence_score
        int priority
        varchar resolution
        timestamptz created_at
        timestamptz resolved_at
        timestamptz refreshed_at
        varchar source
    }

    CLUSTER_MERGE_SUGGESTIONS {
        uuid id PK
        uuid tenant_id FK
        uuid cluster_a_id FK
        uuid cluster_b_id FK
        float similarity
        timestamptz created_at
        timestamptz resolved_at
        timestamptz refreshed_at
        varchar source
        varchar resolution
    }

    IDENTITY_CLUSTER_BLOCKS {
        uuid id PK
        uuid tenant_id FK
        uuid identity_id FK
        uuid blocked_cluster_id FK
        text reason
        timestamptz created_at
        timestamptz expires_at
        int created_by_user_id
    }

    IDENTITY_CONSTRAINTS {
        uuid id PK
        uuid tenant_id FK
        uuid identity_a FK
        uuid identity_b FK
        varchar constraint_type
        varchar source
        timestamptz created_at
        int created_by_user_id
    }

    TENANTS ||--o{ API_KEYS : "owns"
    TENANTS ||--o{ MEDIA_IDENTITIES : "owns"
    TENANTS ||--o{ IDENTITY_CLUSTERS : "owns"
    TENANTS ||--o{ IDENTITY_SUGGESTIONS : "owns"
    TENANTS ||--o{ CLUSTER_MERGE_SUGGESTIONS : "owns"
    TENANTS ||--o{ IDENTITY_SCAN_JOBS : "owns"
    TENANTS ||--o{ IDENTITY_CLUSTERING_JOBS : "owns"
    TENANTS ||--o{ IDENTITY_CLUSTER_BLOCKS : "owns"
    TENANTS ||--o{ IDENTITY_CONSTRAINTS : "owns"

    IDENTITY_SCAN_JOBS ||--o{ IDENTITY_SCAN_JOB_ITEMS : "items"

    IDENTITY_CLUSTERS ||--o{ IDENTITY_MEMBERS : "contains"
    IDENTITY_CLUSTERS ||--o{ IDENTITY_CLUSTER_REPRESENTATIVES : "has reps"
    IDENTITY_CLUSTERS ||--|| MV_IDENTITY_CLUSTER_CENTROIDS : "summarized_by"
    IDENTITY_CLUSTERS ||--o{ IDENTITY_SUGGESTIONS : "suggested_target"
    IDENTITY_CLUSTERS ||--o{ CLUSTER_MERGE_SUGGESTIONS : "cluster_a"
    IDENTITY_CLUSTERS ||--o{ CLUSTER_MERGE_SUGGESTIONS : "cluster_b"
    IDENTITY_CLUSTERS ||--o{ IDENTITY_CLUSTER_BLOCKS : "blocked_by"
    IDENTITY_CLUSTERS ||--o| MEDIA_IDENTITIES : "representative_identity"

    MEDIA_IDENTITIES ||--o| IDENTITY_MEMBERS : "member"
    MEDIA_IDENTITIES ||--o| IDENTITY_CLUSTER_REPRESENTATIVES : "represents"
    MEDIA_IDENTITIES ||--o{ IDENTITY_SUGGESTIONS : "candidate_for"
    MEDIA_IDENTITIES ||--o{ IDENTITY_CLUSTER_BLOCKS : "blocked_identity"
    MEDIA_IDENTITIES ||--o{ IDENTITY_CONSTRAINTS : "identity_a"
    MEDIA_IDENTITIES ||--o{ IDENTITY_CONSTRAINTS : "identity_b"
